@@ -24,6 +24,7 @@ Bugs fixed:
 - 2841419 Memory leak during chunked ec call
 - 2844044 Script to test slp functionality
 - 2844812 CMPIConnect2 doesn't init CMPIStatus completely
+- 2847757 local cim client execQuery leak
 
 Changes in 1.3.4
 ================
